@@ -1,3 +1,4 @@
 EBUILD perl-Compress-Raw-Zlib-2.015.ebuild 613 RMD160 cd398fad516884f0531258018115fd4744dd6648 SHA1 147dc01dffeacd6ba1dfda5874d95cbb3f43c6a8 SHA256 c857444892c7248529b3ea6e319c2f8bd197adb3aa9926993a83f6bb28fe818f
-MISC ChangeLog 711 RMD160 3eb25d970e549c81d8075734fce0b82b420da0c6 SHA1 7077589785c9bab4966a7502fd45365019cb3711 SHA256 50aab02d567ac07553963ff1926b38a97b24cde66833cab2e0bbc8cbc8fd92ac
+EBUILD perl-Compress-Raw-Zlib-2.017.ebuild 611 RMD160 ea16109206a414ebc43c1ef8c1c5c2ec42ab4cf3 SHA1 a047dc93dc209cec052ddc9d14e04b0d2dcbfb97 SHA256 a6152fb5fe3d4cddc8f285cfcde335acdd0abeab56841234750a62e35ad44852
+MISC ChangeLog 860 RMD160 ccadb31ed12e61843361a57083097d978aca590d SHA1 62901fb84e4c3224e6bae676411530be815dafe9 SHA256 c0368c1b2cf3f8e4f4828ff142bc16f9ef022182b953948a6b10e00cb6e1149d
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
