@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Compress-Raw-Zlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Raw-Zlib/ChangeLog,v 1.3 2009/03/13 22:23:51 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Raw-Zlib/ChangeLog,v 1.4 2009/04/18 17:12:55 tove Exp $
+
+*perl-Compress-Raw-Zlib-2.017 (18 Apr 2009)
+
+  18 Apr 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Compress-Raw-Zlib-2.017.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -perl-Compress-Raw-Zlib-2.008.ebuild:
